OWB-461 use valueOf instead of 'new' and remove an unused private method
git-svn-id: https://svn.apache.org/repos/asf/openwebbeans/trunk@1072776 13f79535-47bb-0310-9956-ffa450edef68